# hashwx

./: CMakeLists.txt  README.md
.github/: build_and_test.yml
.github/workflows/: build_and_test.yml
doc/: design.md  example.c  example.js  specification.md
include/: hashwx.h
js/: hashwx-em.js  hashwx.js
src/: bench.c  compiler.c  compiler.h  compiler_a64.c  compiler_wasm.c  compiler_x86.c  context.c  context.h  crush.c  hashwx.c  instruction.h  platform.c  platform.h  program.c  program.h  program_exec.c  siphash_rng.c  siphash_rng.h  test_utils.h  tests.c  virtual_memory.c  virtual_memory.h
